--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
   },
   "scripts": {
     "client": "cd client && yarn start",
-    "server": "nodemon server server.js",
+    "server": "nodemon server.js",
     "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\"",
     "dev:server": "cd client && yarn build && cd .. && yarn start",
-    "start": "node server server.js",
+    "start": "node server.js",
     "heroku-postbuild": "cd client && npm install && npm install --only=dev --no-shrinkwrap && npm run build"
   },
   "devDependencies": {
