--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "moment-timezone": "^0.5.26",
+    "p-iteration": "^1.1.8",
     "redis": "^2.8.0",
     "request": "^2.88.0",
     "request-promise": "^4.2.4",
